# telegram_forward_blocker

./: .dockerignore  .gitignore  Dockerfile  __main__.py  auth.py  client.py  config.py  docker-compose.yml  handlers.py  pyproject.toml  repository.py  requirements.txt  utils.py
src/: __main__.py  client.py  config.py  exceptions.py  handlers.py  repository.py
